# velo

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json
.github/workflows/: release.yml
apps/android/: .gitignore  capacitor.settings.gradle  keystore.properties.example  variables.gradle
apps/android/app/: capacitor.build.gradle
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/binaries/cloudflared/: README.md
apps/desktop/capabilities/: main.json
apps/desktop/permissions/: default.toml
apps/desktop/resources/: README.md
apps/desktop/src/: backend_manager.rs  config.rs  core_loader.rs  core_manager.rs  driver_watchdog.rs  frontend_loader.rs  log_messages.rs  main.rs  manifest.rs  module_manager.rs  server_manager.rs  tray.rs  tunnel_manager.rs  update_progress.rs
apps/desktop/windows/: installer-hooks.nsh
apps/server/: Dockerfile  package.json
apps/server/src/: config-route.ts  config.ts  index.ts  log-messages.ts  pairing-route.ts  pairing.ts  signaling.ts  socket-rate-limit.ts  status-route.ts  turn-credentials.ts  version-route.ts  version.ts
apps/web/: .env.example  capacitor.config.ts  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/web/android/: build.gradle  capacitor.build.gradle  capacitor.settings.gradle  gradle.properties  variables.gradle
apps/web/android/app/: build.gradle  capacitor.build.gradle
apps/web/public/: splashscreen.html
apps/web/scripts/: deploy-web.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: AboutPanel.tsx  AndroidUpdateBanner.tsx  AppShell.tsx  BottomTabbar.tsx  ConnectionModeSettings.tsx  ConnectionStatusPanel.tsx  ConsolePanel.tsx  DevLogList.tsx  DevStageLogPanel.tsx  PairingChoice.tsx  PairingCodeEntry.tsx  PlatformReleaseColumn.tsx  QrScannerButton.tsx  SettingsPanel.tsx  SettingsTabs.tsx  Sidebar.tsx  UpdateBanner.tsx  UpdateNotificationBanner.tsx  UpdatesTab.tsx  VeloIcon.tsx
apps/web/src/lib/: pairing.ts  (+10 more)
config/: manifest.json  system.yml  user.yml
crates/vcam-driver/: Cargo.toml
crates/vcam-driver/src/: ffi.rs  lib.rs  log_messages.rs  rgba_to_nv12.rs  shared_memory_queue.rs
scripts/: collect-android-artifact.mjs  collect-core-artifact.mjs  collect-desktop-artifact.mjs  prepare-backend-sidecar.mjs  release.ts  run-gradle-task.ts  sync-version.ts
(+28 files in other folders)
