[package]
name = "velo-desktop"
version = "0.1.0"
description = "Velo Windows Desktop Camera Viewer App"
authors = ["Cetrei"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
vcam-driver = { path = "../../crates/vcam-driver" }
