[package]
name = "velo-desktop"
version = "0.1.0"
description = "Velo Windows Desktop Camera Viewer App"
authors = ["Cetrei"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico"] }
tauri-plugin-single-instance = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["time"] }
vcam-driver = { path = "../../crates/vcam-driver" }
