[package]
name = "vcam-driver"
version = "0.1.0"
edition = "2024"

[lib]
name = "vcam_driver"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security"
] }
